Fix responsive spacing in APR /lending

--- a/packages/fulcrum-website/_sass/component/_spacing.scss
+++ b/packages/fulcrum-website/_sass/component/_spacing.scss
@@ -108,6 +108,9 @@
   }
 }
 @media (max-width: 767px) {
+  .mr-sm-5{
+    margin-right: 5px;
+  }
   .mr-sm-30 {
     margin-right: 30px;
   }
